--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -13,6 +13,8 @@ bottom: 10rem;
 color: black !important;
 
 font-size: 1.2rem !important;
+display: flex;
+gap: 15px;
 button{
    padding:0.7rem 2rem;
 }
