--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -2,7 +2,7 @@
     // height: auto;
     padding: 2rem 0;
     background-color: rgba(0, 0, 0, 0.813);
-    margin-top: 4rem;
+  
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: start;
     gap: 35px;
+    margin-top: 5rem;
     .lineDiv{
         height: 40vh;
         background-color:gray ;
@@ -72,7 +73,9 @@
     display: flex;
     gap: 20px;
     cursor: pointer;
+
 }
+
 .InfoIcon{
     display: flex;
     flex-wrap: wrap;
@@ -84,11 +87,14 @@
         color: rgb(128, 128, 128);
         font-size: 1rem;
     }
- .InfoIcon{
     color: whitesmoke;
- }
-  
+
 }
+.AboutIcon:hover{
+scale: 1.3;
+transition: ease all 500ms;
+}
+
 @media only screen and (max-width: 992px) {
     .Footer_Img{
       display: none;
