--- a/src/Components/Chaities/Charities.scss
+++ b/src/Components/Chaities/Charities.scss
@@ -5,13 +5,13 @@
     align-content: center;
     justify-content: center;
     align-items: center;
-
     cursor: pointer;
     
 }
 .charity{
   img{
     border-radius: 10px;
+    width: 250px;
   }
 }
 .charity:hover{
