--- a/src/Components/Chaities/Charities.scss
+++ b/src/Components/Chaities/Charities.scss
@@ -1,25 +1,26 @@
-.Carities{
-    margin-top: 3rem;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    
+.charities{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  cursor: pointer;
+
 }
-.charity{
-  img{
-    border-radius: 10px;
-    width: 250px;
-  }
+
+.charityAndRestaurantImg{
+  border-radius: 10px;
+    width: 240px;
+    padding-bottom: 1rem;
 }
 .charity:hover{
     scale: 1.1;
     transition: ease all 500ms;
 }
 .content_charity{
-    background-color: #0c4f70fd;
+    background-color: #ac6327;
     color: white;
     padding: 2rem 2rem;
     text-align: center;
