--- a/src/Components/ScroollButton/ScrollToTopButton.scss
+++ b/src/Components/ScroollButton/ScrollToTopButton.scss
@@ -6,7 +6,7 @@
     right: 10px;
     font-size: 18px;
     padding: 14px;
-    background-color: #007bff;
+    background-color: #f7e166;
     color: #fff;
     border: none;
     border-radius: 5px;
