--- a/src/Components/Carousel/Carousel.scss
+++ b/src/Components/Carousel/Carousel.scss
@@ -3,6 +3,9 @@
     height: 500px;
   margin-top: 3.4rem;
   z-index: 100;
+  width: 90%;
+  margin-top: 4rem;
+  border-radius: 5px;
 
 }
 // .swiper-button-prev,.swiper-button-next{
@@ -13,5 +16,5 @@
 // }
 .swiper-button-prev::after,.swiper-button-next::after{
 font-size: 35px !important;
-color: #0c6d70ea;
+color: rgb(64, 61, 61);
 }
