--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,11 +1,12 @@
 .Nav{
-    background-color:#0c6d70ea;
+    // #0c6d70ea
+    background-color: #e3ca6e;
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
     align-items: center;
     flex-direction: row;
-    padding: 0.5rem 5rem;
+    padding: 0.5rem 1rem;
     font-size: 1.3rem;
     position: fixed;
     top: 0;
@@ -32,9 +33,10 @@
     }
 }
 .Nav_link.active{
-    // border-bottom: 2px solid  #0c4f70fd;
+    border-bottom: 1.2px solid  #474b4cfd;
 width: auto;
 color: black;
+
 }
 .Nav_link{
 color:whitesmoke;
