--- a/src/Pages/FAQ/FAQ.scss
+++ b/src/Pages/FAQ/FAQ.scss
@@ -17,8 +17,9 @@
   border-radius: 10px;
 }
 .Questions {
+  // rgba(12, 109, 112, 0.6705882353)
     display: flex;
-    background-color: rgba(12, 109, 112, 0.6705882353);
+    background-color:#6b6476 ;
     padding: 0.5rem 1rem;
   
     flex-direction: row;
@@ -42,10 +43,10 @@
   }
  
 }
-.Questions:hover{
-   background-color:  rgba(12, 109, 112, 0.869);
-   transition: ease all 200ms;
-}
+// .Questions:hover{
+//    background-color:  rgba(12, 109, 112, 0.869);
+//    transition: ease all 200ms;
+// }
 .QuestionIcon{
     font-size: 1.4rem;
 }
