--- a/src/Pages/Login/Login.scss
+++ b/src/Pages/Login/Login.scss
@@ -1,33 +1,63 @@
-.loginForm{
+.loginImg {
+  height: 100vh;
+  object-fit: fill;
+  background-position: 50%;
+  background-size: 100%;
+}
+.loginForm {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  margin-top: 6rem;
-
-}
-.user__form{
-width: 600px;
-  border: 1px solid rgba(0 0 0 / .3);
-flex-direction: column;
-  padding: 20px;
-  border-radius: 10px;
- display: flex;
- flex-wrap: wrap;
- justify-content: center;
- box-shadow: 10 10 20px rgba(0, 0, 0, 0.5) !important;
- .label {
-  color: white;
-  span {
-    color: red;
+  background-color: #fdf4d6;
+  min-height: 100vh;
+  min-width: 100%;
+  h1{
+    text-align: center;
+    padding-bottom: 3rem;
+    color: #665656;
   }
 }
-background-color: rgba(0, 0, 0, 0.724);
- .field{
-  padding: 0.5rem 1rem;
-  outline: 0;
-  border: 0;
-  border-radius: 5px;
+.user__form {
+  background-color: #fae392 !important;
+  h3 {
+    color: #1a5d1a;
+    text-align: center;
+    padding-bottom: 1rem;
+  }
+
+  width: 600px;
+  border: 0 !important;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  box-shadow: 10 10 20px rgba(0, 0, 0, 0.5) !important;
+  .label {
+    color: #1a5d1a !important;
+    span {
+      color: red;
+    }
+    .formButton {
+      background-color: #1a5d1a !important;
+    }
+  }
+
+  .field {
+    padding: 0.5rem 1rem !important;
+    border-radius: 10px !important;
+    border-bottom: #1a5d1a 2px solid !important;
+    outline: 0 !important;
+    border: 0;
+  }
 }
+.formButton {
+  background-color: #1a5d1a !important;
+  border: 0 !important;
+  color: #fae392 !important;
+  padding: 0.4rem 1.4rem !important;
+  font-size: 1.1rem !important;
 }
