--- a/src/Pages/Services/Services.scss
+++ b/src/Pages/Services/Services.scss
@@ -1,43 +1,43 @@
-.Services{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-
+.Services {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 70px;
 }
-.Charity_Header{
-    background-color: #0c4f70fd;
-    text-align: center;
-    border-radius: 20px;
-    padding:0 1rem;
-    margin-top: 3rem;
-    h1{
-        font-size: 1.5rem;
-        color: whitesmoke;
-        padding: 0.5rem 0;
-        text-shadow: 3px 3px blue;
-    }
-    box-shadow: 5px 5px 30px rgb(49, 39, 39)
-  
- 
-   
+.Charity_Header {
+  background-color: #534173 !important;
+  text-align: center;
+  border-radius: 20px;
+  padding: 0 1rem;
+  margin-top: 3rem;
+  h1 {
+    font-size: 1.5rem;
+    color: whitesmoke;
+    padding: 0.5rem 0;
+    text-shadow: 3px 3px rgb(30, 30, 45);
+  }
+  box-shadow: 5px 5px 30px rgb(57, 38, 86);
 }
-.restaurant_Header{
-    background-color: #0c4f70fd;
-    text-align: center;
-    border-radius: 20px;
-    padding:0 1rem;
-    margin-top: 5rem;
-    h1{
-        font-size: 1.3rem;
-        color: whitesmoke;
-        padding: 0.5rem 0;
-        text-shadow: 3px 3px blue;
-    }
-    box-shadow: 5px 10px 50px rgb(49, 39, 39)
-  
- 
-   
+.serviceButton {
+  background-color: #534173 !important;
+  border: 0 !important;
+  color: whitesmoke;
+  border-radius: 5px;
+}
+.restaurant_Header {
+  background-color: #534173 !important;
+  text-align: center;
+  border-radius: 20px;
+  padding: 0 1rem;
+  margin-top: 5rem;
+  h1 {
+    font-size: 1.3rem;
+    color: whitesmoke;
+    padding: 0.5rem 0;
+    text-shadow: 3px 3px rgb(30, 30, 45);
+  }
+  box-shadow: 5px 5px 30px rgb(57, 38, 86);
 }
