--- a/src/Components/volForm/VolForm.scss
+++ b/src/Components/volForm/VolForm.scss
@@ -5,11 +5,18 @@
 }
 .volForm{
     border: 3px solid gray;
+
    
 }
-.ContactUs{
-    margin-top: 6rem;
+.ContactInfo{
+    margin-top: 6rem !important;
+}
+// .ContactUs{
+//     margin-top: 6rem !important;
    
+// }
+.VolForm{
+    background-color:  #f0cd87 !important;
 }
 .balanceRadio{
     width: 30px;
