--- a/src/Components/Carousel/Carousel.scss
+++ b/src/Components/Carousel/Carousel.scss
@@ -1,10 +1,10 @@
 .Main_carousel{
     cursor: pointer;
     height: 500px;
-  margin-top: 3.4rem;
+
   z-index: 100;
-  width: 90%;
-  margin-top: 4rem;
+  width: 100%;
+  margin-top: 3.1rem;
   border-radius: 5px;
 
 }
@@ -17,4 +17,48 @@
 .swiper-button-prev::after,.swiper-button-next::after{
 font-size: 35px !important;
 color: rgb(64, 61, 61);
+}
+// YourComponent.scss
+
+.sliderImg {
+  position: relative;
+ 
+  // max-height: 400px; // Adjust as needed
+
+  // img {
+  //   width: 100%;
+  //   height: auto;
+  //   object-fit: cover;
+  // }
+
+  .overlay {
+    position: absolute;
+    top: 50rem;
+    left: 50rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.6); // Semi-transparent black overlay
+
+    .arabic-text {
+     
+      font-size: 24px;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      line-height: 1.5;
+      max-width: 80%; // Adjust as needed
+    }
+  }
+}
+
+
+@media only screen and (max-width: 767px) {
+  .Main_carousel{
+    height: 250px;
+    width: 100%;
+  }
 }
