--- a/src/Components/ContactUs/ContactUs.scss
+++ b/src/Components/ContactUs/ContactUs.scss
@@ -1,41 +1,37 @@
 .ContactUs {
-    display: flex;
-   flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  
-   
-   
-  }
-  .ContactInfo {
-    background-color: rgba(0, 0, 0, 0.724);
-   margin-top: 3rem !important;
-    padding: 1.5rem;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    gap: 10px;
-    border-radius: 10px;
-  
-    box-shadow: 10 10 20px rgba(0, 0, 0, 0.5);
-    .label {
-      color: white;
-      span {
-        color: red;
-      }
-    }
-    input {
-      padding: 1rem;
-      outline: 0;
-      border: 0;
-      border-radius: 5px;
-    }
-    textarea {
-      padding: 1rem;
-      outline: 0;
-      border: 0;
-      border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.ContactInfo {
+  background-color: #f0cd87;
+
+  padding: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 10px;
+  border-radius: 10px;
+
+  box-shadow: 10 10 20px rgba(0, 0, 0, 0.5);
+  .label {
+    color: white;
+    span {
+      color: red;
     }
   }
-  
+  input {
+    padding: 1rem;
+    outline: 0;
+    border: 0;
+    border-radius: 5px;
+  }
+  textarea {
+    padding: 1rem;
+    outline: 0;
+    border: 0;
+    border-radius: 5px;
+  }
+}
