--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -33,7 +33,7 @@
     }
 }
 .Nav_link.active{
-    border-bottom: 1.2px solid  #474b4cfd;
+    // border-bottom: 1.2px solid  #474b4cfd;
 width: auto;
 color: black;
 
@@ -54,14 +54,14 @@ color:whitesmoke;
     gap: 5px;
    
 }
-.Main_logo{
-    width:200px;
-}
-@media only screen and (max-width: 767px) {
-    .Main_logo{
-        width:80px;
-    }
-}
+// .Main_logo{
+//     width:200px;
+// }
+// @media only screen and (max-width: 767px) {
+//     .Main_logo{
+//         width:80px;
+//     }
+// }
 .BarIcon{
     font-size: 1.5rem;
 }
