--- a/src/Components/SideMenue/SideMenue.scss
+++ b/src/Components/SideMenue/SideMenue.scss
@@ -2,8 +2,8 @@
     position: fixed;
     left: 0;
     top: 8rem;
-    background-color: rgba(12, 79, 112, 0.9921568627);
-    height: 35vh;
+    background-color:#e3ca6e;
+   
     width: 100%;
     display: flex;
     flex-direction: column;
