--- a/src/Pages/FAQ/FAQ.scss
+++ b/src/Pages/FAQ/FAQ.scss
@@ -50,3 +50,9 @@
 .QuestionIcon{
     font-size: 1.4rem;
 }
+
+@media only screen and (max-width:1290px){
+.Charity_Header{
+  margin-top: 6rem !important;
+}
+} 
