--- a/src/Components/ContactUs/ContactUs.scss
+++ b/src/Components/ContactUs/ContactUs.scss
@@ -6,7 +6,7 @@
   align-items: center;
 }
 .ContactInfo {
-  background-color: #f0cd87;
+  background-color: #00000057;
 
   padding: 1.5rem;
   display: flex;
