--- a/src/Components/PresentOrder/PresentOrder.scss
+++ b/src/Components/PresentOrder/PresentOrder.scss
@@ -30,7 +30,7 @@
 //   }
 // }
 .present{
-  background-color: #f0cd87 !important;
+  background-color: #2e2d2dc2 !important;
   margin: 0 !important;
   padding: 1.5rem;
   display: flex;
@@ -66,4 +66,5 @@
   border-bottom: gray 2px solid !important;
   outline: 0 !important;
   border: 0;
+  color: white !important;
 }
