--- a/src/Components/volForm/VolForm.scss
+++ b/src/Components/volForm/VolForm.scss
@@ -16,7 +16,7 @@
    
 // }
 .VolForm{
-    background-color:  #f0cd87 !important;
+    background-color:  #00000057 !important;
 }
 .balanceRadio{
     width: 30px;
