--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,60 +1,21 @@
-.Footer{
-    // height: auto;
-    padding: 2rem 0;
-    background-color: rgba(0, 0, 0, 0.813);
-  
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    align-items: start;
-    gap: 35px;
-    margin-top: 5rem;
-    .lineDiv{
-        height: 40vh;
-        background-color:gray ;
-        width: 0.5px;
-    }
-    .FooterImg{
-        width: 25%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-content: flex-start;
-        justify-content: center;
-        align-items: center;
-        .Footer_Img{
-            width: 250px;
-            border-radius: 50%;
-        }
-    }
-    .Info{
-        width: 25%;
-       
-        h1{
-            color: whitesmoke;
-            font-size: 1.2rem;
-        }
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: start;
-        align-items: baseline;
-        gap: 30px;
-    }
-   
-}
-.AboutUs{
-    
-    h1{
-        color: whitesmoke;
-        font-size: 1.2rem;
-    }
-    p{
-        color: rgb(128, 128, 128);
-        font-size: 1rem;
-    }
+.Footer {
+  // height: auto;
+  padding: 2rem 0;
+  background-color: rgba(0, 0, 0, 0.813);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: start;
+  gap: 35px;
+  margin-top: 5rem;
+  .lineDiv {
+    height: 40vh;
+    background-color: gray;
+    width: 0.5px;
+  }
+  .FooterImg {
     width: 25%;
     display: flex;
     flex-direction: row;
@@ -62,53 +23,90 @@
     align-content: flex-start;
     justify-content: center;
     align-items: center;
-    gap: 30px;
-    padding: 2rem ;
+    .Footer_Img {
+      width: 250px;
+      border-radius: 50%;
+    }
+  }
+  .Info {
+    width: 25%;
 
-  
-
-}
-.FooterIcons{
-    font-size: 1.5rem;
-    display: flex;
-    gap: 20px;
-    cursor: pointer;
-
-}
-
-.InfoIcon{
+    h1 {
+      color: whitesmoke;
+      font-size: 1.2rem;
+    }
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: start;
     align-items: baseline;
-    gap: 10px;
-      p{
-        color: rgb(128, 128, 128);
-        font-size: 1rem;
-    }
-    color: whitesmoke;
-
+    gap: 30px;
+  }
 }
-.AboutIcon:hover{
-scale: 1.3;
-transition: ease all 500ms;
+.AboutUs {
+  h1 {
+    color: whitesmoke;
+    font-size: 1.2rem;
+  }
+  p {
+    color: rgb(128, 128, 128);
+    font-size: 1rem;
+  }
+  width: 25%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding: 2rem;
+}
+.FooterIcons {
+  font-size: 1.5rem;
+  display: flex;
+  gap: 20px;
+  cursor: pointer;
+}
+
+.InfoIcon {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: start;
+  align-items: baseline;
+  gap: 10px;
+  p {
+    color: rgb(128, 128, 128);
+    font-size: 1rem;
+  }
+  color: whitesmoke;
+}
+.AboutIcon:hover {
+  scale: 1.3;
+  transition: ease all 500ms;
 }
 
 @media only screen and (max-width: 992px) {
-    .Footer_Img{
-      display: none;
-    }
-    .lineDiv{
-        display: none;
-    }
-    .Footer{
-        display: flex;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-content: start;
-        justify-content: start;
-        align-items: start;
-    }
+  .Footer_Img {
+    display: none;
+  }
+  .lineDiv {
+    display: none;
+  }
+  .Footer {
+    display: flex;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: start;
+    justify-content: start;
+    align-items: start;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .Footer {
+    padding: 0;
+  }
 }
